(lang dune 3.10)
(name camldiets)
(version 0.3)

(generate_opam_files true)

(package
 (name camldiets)
 (synopsis "A highly efficient OCaml set implementation for fat sets, i.e. densely populated sets over a discrete linear order")
 (description "A highly efficient OCaml set implementation for fat sets, i.e. densely populated sets over a discrete linear order.")
 (depends
   ocaml
   dune
 )
 (license "BSD-3-clause")
 (authors "Oliver Friedmann" "Martin Lange") 
 (maintainers "Oliver Friedmann" "Martin Lange")
 (homepage "https://github.com/tcsprojects/camldiets")
 (bug_reports "https://github.com/tcsprojects/camldiets/issues")
)


